<resources>
    <string name="activity_card">School card</string>
    <string name="app_name">SHU-Lehu</string>

    <string name="app_bar_search_hint">Article Search</string>
    <string name="search">Search</string>
    <string name="search_no_empty">Keyword cannot be empty</string>
    <string name="search_result_empty">Nothing searched.</string>

    <string name="article">Article</string>
    <string name="article_jump">Jump to</string>
    <string name="article_list">Article List</string>
    <string name="article_load">Loading&#8230;</string>
    <string name="article_send">Comment sending&#8230;</string>
    <string name="no_slip_page_tip">You can click the item in the menu to switch page</string>

    <string name="database_has_aid">Already marked</string>
    <string name="database_mark">Marked successful</string>
    <string name="database_no_item">No marked article</string>
    <string name="database_delete_title">Delete</string>
    <string name="database_delete_text">Delete which one you select ?</string>
    <string name="database_delete_confirm">Delete</string>
    <string name="database_delete_cancel">Cancel</string>
    <string name="database_delete_success">Delete Finish</string>

    <string name="discover_des">From Lehu BBS</string>
    <string name="discover_no_data">No info</string>
    <string name="discover_trade_begin">Begin</string>
    <string name="discover_trade_end">End</string>
    <string name="discover_trade_reset">Reset</string>
    <string name="discover_trade_start">Query</string>
    <string name="discover_busy">Please don not commit again.</string>
    <string name="discover_total">Total:</string>

    <string name="discover_run">Running Consult</string>
    <string name="discover_card">Sold Consult</string>
    <string name="discover_not_allow">There is no such function in current version</string>

    <string name="content_comment_button">Comment</string>
    <string name="content_comment_hint">Press enter to comment</string>

    <string name="declair">欢迎您下载使用《随享乐乎》上海大学乐乎BBS非官方客户端！
	    					\n使用须知：
	    					\n客户端是由Veyx业余开发，Veyx版权所有
	    					\n客户端只提供来源于乐乎社区的信息获取，任何乐乎社区的言论与本应用作者无关
	    					\n客户端不会收集您的账户密码等信息，只储存于本地供您的专属客户端调用，
	    						若仍有不适，请在 设置->注销 处退出登录，客户端会删除您的有关信息，相应的，您会失去自动登陆的方便功能
	    					\n如果您认为侵犯到您的合法权益，请与我取得联系，我将在3个工作日内详细调查，若情况属实，我将移除侵权内容
	    					\n\n说明：
	    					\n为了避免校内信息泄露，客户端要求您以您的校园卡卡号+密码方式登陆，以验证身份、保障我们的校园安全。
							\n构建本客户端的目的在于希望大家可以充分利用我们已经拥有的乐乎社区的各项资源，方便我们的学校生活。
	    					\n目前功能有：
	    					\n·乐乎BBS文章分类查看、评论
	    					\n·乐乎社区校园卡查询如晨跑查询、卡务查询
	    					\n·上海大学校务管理、选课系统快捷通道
	    					\n规划的下一个版本内容：
	    					\n·多语言支持：English,Français,简体中文,日本語
	    					\n·发帖功能
	    					\n最后，感谢您的使用，若您发现bug，可以发送邮件至
	    					\nveyx.shaw@gmail.com与我取得联系</string>

    <string name="default_nickname">Lehu User</string>

    <string name="exit_confirm">Quit ?</string>
    <string name="exit_confirm_yes">Logout</string>
    <string name="exit_confirm_no">Cancel</string>
    <string name="exit_again">Press return again to exit application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="snackbar_log">Not logged</string>
    <string name="snackbar_logging">Logging&#8230;</string>

    <string name="login_login">Log in</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_account_hint">Student ID</string>
    <string name="login_password_hint">Please enter your password</string>
    <string name="logining">Loading&#8230;</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="nav_header_hint">Click to login</string>
    <string name="nav_home">Focus</string>
    <string name="nav_category">Category</string>
    <string name="nav_mark">Mark</string>
    <string name="nav_search">Search</string>
    <string name="nav_discover">Discovery</string>
    <string name="nav_personal">Personal</string>
    <string name="nav_title2">Other</string>
    <string name="nav_about">About</string>
    <string name="nav_setting">Setting</string>

    <!-- Errors -->
    <string name="error">Error</string>
    <string name="no_SHUPassport">Login out of date</string>
    <string name="no_network">Please check you network</string>
    <string name="error_password">Wrong password or invalid account</string>
    <string name="no_accorpwd">Please input your account and password</string>
    <string name="invalid_address">Invalid address</string>
    <string name="unknown_page">Ah&#8230; It is being built</string>
    <string name="no_cache_file">Read cache file failed refreshing</string>
    <string name="first_page">Already in first page</string>
    <string name="last_page">Already in last page</string>

    <string name="common_comfirm">Comfirm</string>
    <string name="common_cancel">Cancel</string>

    <string name="send_ok">Send OK</string>
    <string name="edit_no_empty">Content should not be empty</string>

    <string name="action_share">Share</string>
    <string name="action_article">New</string>
    <string name="action_mark">Mark</string>
    <string name="action_comment">Comment</string>
    <string name="action_next">Next</string>
    <string name="action_pre">Previous</string>

    <string name="preference_no_picture_title">No picture mod</string>
    <string name="preference_no_picture_summary">Load page without picture.</string>
    <string name="preference_slip_to_switch_page">Slip to switch page</string>

    <string name="init_sign">2016 Inoki(Veyx) All Rights Resevered.</string>

</resources>
